<resources>
    <!-- Hello blank-->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Application -->
    <string name="app_name">Utility Hub</string>
    <string name="appTitle">Utility Hub</string>

    <!-- Maps-->
    <string name="maps">Maps</string>
    <string name="mirage">Mirage</string>
    <string name="inferno">Inferno</string>
    <string name="dust2">Dust2</string>
    <string name="train">Train</string>
    <string name="vertigo">Vertigo</string>
    <string name="overpass">Overpass</string>
    <string name="ancient">Ancient</string>
    <string name="nuke">Nuke</string>

    <!-- Utility -->
    <string name="retake">Retake</string>
    <string name="smokes">Smokes</string>
    <string name="flashes">Flashes</string>
    <string name="molotovs">Molotovs</string>
    <string name="coming_soon">Coming Soon. Stay tuned!</string>
    <string name="land">Landing spot</string>
    <string name="throw_pos">Throwing position</string>
    <string name="stairs">Stairs</string>
    <string name="s1">1</string>
    <string name="info_icon">Info icon</string>
    <string name="lineup">Smoke lineup</string>

    <!-- Profile-->
    <string name="welcome">Welcome!</string>

    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="required">Required</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_confirm_password_error">Passwords do not match</string>
    <string name="invalid_email_error">Please, provide a valid email</string>
    <string name="min_length_password_error">Password must have at least %d characters</string>
    <string name="login_failed">Login failed</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">"Password"</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="continue_without_account">Continue as Guest</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="enter_your_email">Enter your email</string>

    <string name="search">Search</string>
    <string name="or">OR</string>
    <string name="share_tutorial">share tutorial</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="tickrate">Tick rate</string>
    <string name="tickrate_128">128</string>
    <string name="tickrate_64">64</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="favorites">Favorites</string>
    <string name="he_grenades">HEs</string>
    <string name="password_reset_link">Enter the email of your registered account, where you will receive a password reset link</string>
    <string name="double_tap_to_exit">Press back again to exit</string>

    <string name="null_string">""</string>
    <string name="favorites_logged_out">You must authenticate in order to access your favorites.</string>
    <string name="profile_logged_out">You must authenticate in order to access your profile.</string>
    <string name="a_site">A Site</string>
    <string name="b_site">B Site</string>
    <string name="one_way">One Way</string>
    <string name="preferences">preferences</string>
    <string name="default_tickrate">Default tick rate</string>
    <string name="to">To</string>
    <string name="mid">Mid</string>
    <string name="self_pop">Self-pop</string>
    <string name="empty_favorites">No favorites to show</string>
    <string name="checkout_tutorials">Checkout our tutorials and add the ones you like to this section</string>
    <string name="browse_tutorials">Browse Tutorials</string>

    <string-array name="utilities">
        <item>Smokes</item>
        <item>Flashes</item>
        <item>Molotovs</item>
        <item>HEs</item>
    </string-array>

</resources>