<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorialLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mirage_background_blur"
    app:layoutDescription="@xml/fragment_tutorial_scene"
    tools:context=".fragments.TutorialFragment">

    <TextView
        android:id="@+id/textview1"
        style="@style/TextView_Tutorial_TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/lineup"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintStart_toEndOf="@+id/btnMaps"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/textview1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFavorites" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMaps"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:drawableTop="@drawable/ic_map"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/maps"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="11sp"
        app:elevation="0dp"
        app:iconPadding="0dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:drawableTop="@drawable/ic_share"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="11sp"
        app:elevation="0dp"
        app:iconPadding="0dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavorites"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:drawableTop="@drawable/ic_favorite"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_to_favorites"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="11sp"
        app:elevation="0dp"
        app:iconPadding="0dp"
        app:iconTint="@color/icon_color"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintStart_toEndOf="@+id/btnMaps"
        app:layout_constraintTop_toBottomOf="@+id/tw_tick" />

    <TextView
        android:id="@+id/tw_tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/lora_italic_semibold"
        android:maxLines="1"
        android:text="@string/tickrate"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textview1"
        app:layout_constraintStart_toStartOf="@+id/textview1"
        app:layout_constraintTop_toBottomOf="@id/textview1" />

</androidx.constraintlayout.motion.widget.MotionLayout>